道具 - 查询商店，查询自己，购买，对用户使用，对回复使用，购买并对回复使用